--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -97,17 +97,27 @@
   "inventory": {
     "title": "Склад",
     "addNew": "Добавить товар",
+    "addItem": "Добавить новый товар",
     "allCategories": "Все категории",
     "table": {
       "name": "Название",
       "sku": "Артикул",
       "category": "Категория",
       "quantity": "Количество",
-      "unit": "Ед. изм.",
-      "minQuantity": "Мин. количество",
+      "unit": "Единица",
+      "minQuantity": "Мин. кол-во",
+      "unitPrice": "Цена за ед.",
       "price": "Цена",
       "supplier": "Поставщик",
       "actions": "Действия"
+    },
+    "form": {
+      "nameEn": "Название (Английский)",
+      "nameEt": "Название (Эстонский)",
+      "nameFi": "Название (Финский)",
+      "nameRu": "Название (Русский)",
+      "location": "Местоположение",
+      "supplier": "Поставщик"
     },
     "category": {
       "Electrics": "Электрика",
