feat: Advanced Work Order & Inventory Integration - Complete parts selection system with search, validation, and automatic deduction - Priority system with color-coded badges and automatic sorting - Full CRUD operations for work orders - Backend validation for inventory stock availability - Automatic inventory deduction when work order status changes to COMPLETED - Multi-language support (EN/RU) - UI improvements for dark modal backgrounds

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -38,19 +38,23 @@
   "workOrders": {
     "title": "Work Orders",
     "createNew": "New Work Order",
+    "edit": "Edit Work Order",
+    "confirmDelete": "Are you sure you want to delete this work order?",
     "table": {
       "id": "ID",
       "title": "Title",
+      "description": "Description",
       "equipment": "Equipment",
       "priority": "Priority",
       "status": "Status",
       "assignedTo": "Assigned To",
       "dueDate": "Due Date",
+      "estimatedHours": "Est. Hours",
       "actions": "Actions"
     },
     "status": {
       "pending": "Pending",
-      "inProgress": "In Progress",
+      "in_progress": "In Progress",
       "completed": "Completed",
       "cancelled": "Cancelled"
     },
@@ -62,13 +66,28 @@
     },
     "form": {
       "title": "Title",
+      "titlePlaceholder": "Enter work order title",
       "description": "Description",
+      "descriptionPlaceholder": "Enter work order description",
       "equipment": "Select Equipment",
       "priority": "Priority",
+      "status": "Status",
       "assignedTo": "Assign To",
       "dueDate": "Due Date",
+      "estimatedHours": "Estimated Hours",
+      "notes": "Notes",
+      "notesPlaceholder": "Additional notes (optional)",
       "submit": "Create Work Order",
       "cancel": "Cancel"
+    },
+    "parts": {
+      "title": "Required Parts",
+      "search": "Search parts...",
+      "quantity": "Qty",
+      "add": "Add",
+      "partName": "Part",
+      "inStock": "In Stock",
+      "insufficientStock": "Some parts have insufficient stock. Order will be created with \"Awaiting Parts\" status."
     },
     "noData": "No work orders found",
     "error": "Error loading work orders"
@@ -150,6 +169,7 @@
     "confirmDelete": "Are you sure you want to delete this item",
     "view": "View",
     "save": "Save",
+    "create": "Create",
     "cancel": "Cancel",
     "close": "Close",
     "loading": "Loading...",
