--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -38,19 +38,23 @@
   "workOrders": {
     "title": "Заказы на работы",
     "createNew": "Новый заказ",
+    "edit": "Редактировать заказ",
+    "confirmDelete": "Вы уверены, что хотите удалить этот заказ?",
     "table": {
       "id": "Номер",
       "title": "Название",
+      "description": "Описание",
       "equipment": "Оборудование",
       "priority": "Приоритет",
       "status": "Статус",
       "assignedTo": "Назначен",
       "dueDate": "Срок выполнения",
+      "estimatedHours": "Оценка ч.",
       "actions": "Действия"
     },
     "status": {
       "pending": "Ожидает",
-      "inProgress": "В работе",
+      "in_progress": "В работе",
       "completed": "Завершено",
       "cancelled": "Отменено"
     },
@@ -62,13 +66,28 @@
     },
     "form": {
       "title": "Название",
+      "titlePlaceholder": "Введите название заказа",
       "description": "Описание",
+      "descriptionPlaceholder": "Введите описание заказа",
       "equipment": "Выберите оборудование",
       "priority": "Приоритет",
+      "status": "Статус",
       "assignedTo": "Назначить на",
       "dueDate": "Срок выполнения",
+      "estimatedHours": "Ожидаемые часы",
+      "notes": "Заметки",
+      "notesPlaceholder": "Дополнительные заметки (необязательно)",
       "submit": "Создать заказ",
       "cancel": "Отмена"
+    },
+    "parts": {
+      "title": "Необходимые запчасти",
+      "search": "Поиск запчастей...",
+      "quantity": "Кол-во",
+      "add": "Добавить",
+      "partName": "Запчасть",
+      "inStock": "На складе",
+      "insufficientStock": "Некоторые запчасти недоступны в нужном количестве. Заказ будет создан со статусом \"Ожидает запчастей\"."
     },
     "noData": "Заказов нет",
     "error": "Ошибка загрузки заказов"
@@ -149,6 +168,7 @@
     "delete": "Удалить",
     "view": "Просмотр",
     "save": "Сохранить",
+    "create": "Создать",
     "cancel": "Отмена",
     "close": "Закрыть",
     "loading": "Загрузка...",
