--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -32,6 +32,10 @@
       "lowStock": "Мало на складе",
       "outOfStock": "Нет на складе"
     },
+    "maintenance": {
+      "urgentTitle": "Срочное ТО требуется",
+      "noUrgent": "Всё оборудование в хорошем состоянии"
+    },
     "error": "Ошибка загрузки статистики",
     "loading": "Загрузка..."
   },
@@ -95,6 +99,12 @@
   "equipment": {
     "title": "Оборудование",
     "addNew": "Добавить оборудование",
+    "name": "Название",
+    "type": "Тип",
+    "model": "Модель",
+    "serialNumber": "Серийный номер",
+    "manufacturer": "Производитель",
+    "location": "Местоположение",
     "table": {
       "name": "Название",
       "model": "Модель",
@@ -105,8 +115,10 @@
       "actions": "Действия"
     },
     "status": {
+      "label": "Статус",
       "operational": "В работе",
       "maintenance": "На обслуживании",
+      "out-of-service": "Не в эксплуатации",
       "broken": "Сломано",
       "retired": "Списано"
     },
@@ -160,6 +172,20 @@
     "noData": "Товары не найдены",
     "error": "Ошибка загрузки склада"
   },
+  "maintenance": {
+    "management": "Управление ТО",
+    "updateHours": "Обновить моточасы",
+    "currentHours": "Текущие моточасы",
+    "interval": "Интервал обслуживания",
+    "checklist": "Чек-лист обслуживания",
+    "recordService": "Записать обслуживание",
+    "completeRequiredTasks": "Заполните все обязательные задачи перед записью обслуживания",
+    "units": {
+      "days": "дней",
+      "months": "месяцев",
+      "hours": "часов"
+    }
+  },
   "common": {
     "search": "Поиск...",
     "filter": "Фильтр",
@@ -183,6 +209,8 @@
     "profile": "Профиль",
     "settings": "Настройки",
     "notifications": "Уведомления",
-    "language": "Язык"
+    "language": "Язык",
+    "notes": "Примечания",
+    "saving": "Сохранение..."
   }
 }
