--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -32,6 +32,10 @@
       "lowStock": "Low Stock",
       "outOfStock": "Out of Stock"
     },
+    "maintenance": {
+      "urgentTitle": "Urgent Maintenance Required",
+      "noUrgent": "All equipment is in good condition"
+    },
     "error": "Error loading statistics",
     "loading": "Loading..."
   },
@@ -95,6 +99,12 @@
   "equipment": {
     "title": "Equipment",
     "addNew": "Add Equipment",
+    "name": "Name",
+    "type": "Type",
+    "model": "Model",
+    "serialNumber": "Serial Number",
+    "manufacturer": "Manufacturer",
+    "location": "Location",
     "table": {
       "name": "Name",
       "model": "Model",
@@ -105,13 +115,33 @@
       "actions": "Actions"
     },
     "status": {
+      "label": "Status",
       "operational": "Operational",
       "maintenance": "Maintenance",
+      "out-of-service": "Out of Service",
       "broken": "Broken",
       "retired": "Retired"
     },
+    "model": "Model",
+    "serialNumber": "Serial Number",
     "noData": "No equipment found",
     "error": "Error loading equipment"
+  },
+  "maintenance": {
+    "title": "Maintenance",
+    "management": "Maintenance Management",
+    "manage": "Manage",
+    "updateHours": "Update Motor Hours",
+    "currentHours": "Current Hours",
+    "interval": "Maintenance Interval",
+    "checklist": "Maintenance Checklist",
+    "recordService": "Record Service",
+    "completeRequiredTasks": "Complete all required tasks before recording service",
+    "units": {
+      "days": "days",
+      "months": "months",
+      "hours": "hours"
+    }
   },
   "inventory": {
     "title": "Inventory",
@@ -160,6 +190,20 @@
     "noData": "No items found",
     "error": "Error loading inventory"
   },
+  "maintenance": {
+    "management": "Maintenance Management",
+    "updateHours": "Update Motor Hours",
+    "currentHours": "Current Motor Hours",
+    "interval": "Maintenance Interval",
+    "checklist": "Maintenance Checklist",
+    "recordService": "Record Service",
+    "completeRequiredTasks": "Complete all required tasks before recording service",
+    "units": {
+      "days": "days",
+      "months": "months",
+      "hours": "hours"
+    }
+  },
   "common": {
     "search": "Search...",
     "filter": "Filter",
@@ -169,6 +213,7 @@
     "confirmDelete": "Are you sure you want to delete this item",
     "view": "View",
     "save": "Save",
+    "saving": "Saving...",
     "create": "Create",
     "cancel": "Cancel",
     "close": "Close",
@@ -184,6 +229,8 @@
     "profile": "Profile",
     "settings": "Settings",
     "notifications": "Notifications",
-    "language": "Language"
+    "language": "Language",
+    "notes": "Notes",
+    "saving": "Saving..."
   }
 }
