feat: Add Firebase auth, role-based permissions system, advanced reports with analytics, and complete i18n translations
Features added:
- Firebase Authentication with email/password and Google OAuth
- 4-role permission system (admin, chief_mechanic, accountant, mechanic)
- MongoDB User model with auto-admin assignment for vadimlavrenchuk@yahoo.com
- Protected routes and role-based access control
- Reports page with Recharts analytics (Bar/Line/Pie charts)
- CSV export functionality for monthly reports
- Complete translations for all 4 languages (en, ru, fi, et)
- Glassmorphism login page design
- Permission-based UI component rendering (Can component)

Technical improvements:
- Fixed CORS configuration (backend port 5000, frontend port 5173)
- Fixed reports controller to use correct WorkOrder field names
- Added populate for parts.inventoryId to calculate costs correctly
- Moved Firebase config to environment variables for security
- Created .env.example template (real .env is gitignored)

Security:
- All Firebase API keys moved to environment variables
- .env files properly gitignored
- Backend API endpoints for user management

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -11,6 +11,44 @@
     "reports": "Reports",
     "users": "Users"
   },
+  "reports": {
+    "title": "Reports & Analytics",
+    "viewOnly": "View Only",
+    "loading": "Loading reports...",
+    "noData": "No data available",
+    "retry": "Retry",
+    "export": "Export Report",
+    "exporting": "Exporting...",
+    "exportError": "Failed to export data. Please try again.",
+    "dateRange": {
+      "to": "to"
+    },
+    "kpi": {
+      "totalExpenses": "Total Expenses",
+      "itemsUsed": "items used",
+      "avgCompletionTime": "Avg. Completion Time",
+      "ordersCompleted": "orders completed",
+      "activeIssues": "Active Issues",
+      "overdue": "overdue"
+    },
+    "charts": {
+      "topEquipment": "Top 5 Most Expensive Equipment (by Parts)",
+      "weeklyBreakdown": "Weekly Breakdown of Issues",
+      "statusDistribution": "Order Status Distribution",
+      "topIssues": "Top Equipment Issues"
+    },
+    "table": {
+      "equipment": "Equipment",
+      "issueCount": "Issue Count",
+      "totalCost": "Total Cost"
+    },
+    "status": {
+      "completed": "Completed",
+      "pending": "Pending",
+      "overdue": "Overdue"
+    },
+    "accountantNotice": "You have read-only access to reports. Contact an administrator to make changes."
+  },
   "dashboard": {
     "title": "Dashboard",
     "recentActivity": "Recent Activity",
