--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -11,6 +11,44 @@
     "reports": "Отчёты",
     "users": "Сотрудники"
   },
+  "reports": {
+    "title": "Отчёты и аналитика",
+    "viewOnly": "Только просмотр",
+    "loading": "Загрузка отчётов...",
+    "noData": "Нет доступных данных",
+    "retry": "Повторить",
+    "export": "Экспорт отчёта",
+    "exporting": "Экспорт...",
+    "exportError": "Не удалось экспортировать данные. Попробуйте еще раз.",
+    "dateRange": {
+      "to": "до"
+    },
+    "kpi": {
+      "totalExpenses": "Общие расходы",
+      "itemsUsed": "использовано запчастей",
+      "avgCompletionTime": "Среднее время",
+      "ordersCompleted": "заказов выполнено",
+      "activeIssues": "Активные заявки",
+      "overdue": "просрочено"
+    },
+    "charts": {
+      "topEquipment": "Топ-5 затратного оборудования (по запчастям)",
+      "weeklyBreakdown": "Недельная статистика проблем",
+      "statusDistribution": "Распределение по статусам",
+      "topIssues": "Топ проблем оборудования"
+    },
+    "table": {
+      "equipment": "Оборудование",
+      "issueCount": "Количество проблем",
+      "totalCost": "Общая стоимость"
+    },
+    "status": {
+      "completed": "Выполнено",
+      "pending": "В ожидании",
+      "overdue": "Просрочено"
+    },
+    "accountantNotice": "У вас есть доступ только для просмотра отчётов. Обратитесь к администратору для внесения изменений."
+  },
   "dashboard": {
     "title": "Панель управления",
     "recentActivity": "Последняя активность",
